Completed MVP Project Functionality

--- a/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
+++ b/MyJournal/MyJournal/Storyboards/Base.lproj/Main.storyboard
@@ -97,6 +97,9 @@
                                 <rect key="frame" x="20" y="160" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="textEditingDidChange:" destination="qs4-F4-feC" eventType="editingChanged" id="nL2-YJ-d6e"/>
+                                </connections>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8LD-rR-ja7">
                                 <rect key="frame" x="20" y="214" width="374" height="628"/>
@@ -106,7 +109,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="8LD-rR-ja7" firstAttribute="leading" secondItem="Y59-dH-be0" secondAttribute="leading" constant="20" id="3Bs-eS-tLh"/>
                             <constraint firstItem="Y59-dH-be0" firstAttribute="trailing" secondItem="8LD-rR-ja7" secondAttribute="trailing" constant="20" id="DAQ-Sk-Hyq"/>
@@ -133,7 +136,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yNH-TM-BuA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1628" y="205"/>
+            <point key="canvasLocation" x="1565" y="207"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fhe-GF-wgW">
@@ -151,7 +154,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eZq-eh-tUF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-92.753623188405811" y="206.91964285714286"/>
+            <point key="canvasLocation" x="46" y="207"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
