--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -16,45 +16,45 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="60" id="1hL-nK-XdL" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="60"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" id="1hL-nK-XdL" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="56"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1hL-nK-XdL" id="cYS-SF-K5Y">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="geE-LR-xlV">
-                                            <rect key="frame" x="8" y="4" width="398" height="23"/>
+                                            <rect key="frame" x="8" y="8" width="398" height="22"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQY-Ut-qSj">
-                                                    <rect key="frame" x="0.0" y="0.0" width="197" height="19.5"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="197" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hgk-Mc-ZM9">
-                                                    <rect key="frame" x="201" y="0.0" width="197" height="16"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <rect key="frame" x="201" y="0.0" width="197" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </stackView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqF-p1-SID">
-                                            <rect key="frame" x="8" y="35" width="398" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqF-p1-SID">
+                                            <rect key="frame" x="8" y="34" width="398" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="geE-LR-xlV" secondAttribute="trailing" constant="8" id="7Fs-jD-4ua"/>
-                                        <constraint firstItem="geE-LR-xlV" firstAttribute="top" secondItem="cYS-SF-K5Y" secondAttribute="top" constant="4" id="GyZ-cW-5GW"/>
+                                        <constraint firstItem="geE-LR-xlV" firstAttribute="top" secondItem="cYS-SF-K5Y" secondAttribute="top" constant="8" id="GyZ-cW-5GW"/>
                                         <constraint firstItem="AqF-p1-SID" firstAttribute="leading" secondItem="cYS-SF-K5Y" secondAttribute="leading" constant="8" id="KSg-ge-ya0"/>
-                                        <constraint firstAttribute="bottom" secondItem="AqF-p1-SID" secondAttribute="bottom" constant="8" id="YvO-3z-Bcu"/>
+                                        <constraint firstAttribute="bottom" secondItem="AqF-p1-SID" secondAttribute="bottom" constant="4" id="YvO-3z-Bcu"/>
                                         <constraint firstItem="geE-LR-xlV" firstAttribute="leading" secondItem="cYS-SF-K5Y" secondAttribute="leading" constant="8" id="i8t-Vb-quh"/>
                                         <constraint firstAttribute="trailing" secondItem="AqF-p1-SID" secondAttribute="trailing" constant="8" id="u6s-z9-Kwq"/>
-                                        <constraint firstItem="AqF-p1-SID" firstAttribute="top" secondItem="geE-LR-xlV" secondAttribute="bottom" constant="8" id="yIE-Nd-A4y"/>
+                                        <constraint firstItem="AqF-p1-SID" firstAttribute="top" secondItem="geE-LR-xlV" secondAttribute="bottom" constant="4" id="yIE-Nd-A4y"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
